--- a/.github/workflows/r30b1.yml
+++ b/.github/workflows/r30b1.yml
@@ -8,30 +8,20 @@
 #修改以下代码或者开启触发开关都好，要严格按格式对好,前面有多少空格也要看清楚
 #代码里有 name: 后面的内容随便改,冒号后面是有个空格的,如果修改固件名字就要考虑能不能显示出你想要的
 
-name: clt-r30b1-hanwckf 闭源固件
+
+name: r30b1 自用闭源固件
 
 on: 
   repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-#  schedule:
-#    - cron: 0 16 * * *
 
 env:
-  REPO_URL: https://github.com/benboguan/immortalwrt-mt798x
-  REPO_BRANCH: clt-r30b1
-  FEEDS_CONF: feeds.conf.default
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
+  REPO_BRANCH: openwrt-21.02
   CONFIG_FILE: config/r30b1.config
-  DIY_P1_SH: script/diy-part1.sh
-  DIY_P2_SH: script/diy-part2.sh
-  SSH_ACTIONS: false
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
-  UPLOAD_PACKAGES: false
   TZ: Asia/Shanghai
 
 jobs:
@@ -40,7 +30,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: 准备
+    - name: 准备结束
       uses: actions/checkout@main
 
     - name: 开始安装编译所需系统
@@ -64,69 +54,52 @@ jobs:
       with:
         ccache: 'true'
         prefix: ${{ github.workspace }}/openwrt
-
-    - name: 加载feeds跟自定义插件
-      run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
-        chmod +x $DIY_P1_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P1_SH
         
     - name: 更新 & 安装 feeds
       run: |
-        cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+      working-directory: ./openwrt
 
     - name: 加载.config设置
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_P2_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
-
-    - name: SSH远程连接服务器配置固件
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     - name: 下载软件包
       id: package
       run: |
-        cd openwrt
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
+      working-directory: ./openwrt
 
     - name: 开始编译固件
       id: compile
       run: |
-        cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
         echo "status=success" >>$GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+      working-directory: ./openwrt
 
     - name: 检查github储存空间情况
       if: (!cancelled())
       run: df -hT
 
-    - name: 上传packages到github空间
+    - name: 上传bin文件夹(固件+ipk)在github空间
       uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_PACKAGES == 'true'
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt_packages-${{ env.FILE_DATE }}
-        path: openwrt/bin/packages/
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/bin
 
-    - name: 整理文件并重命名
+    - name: 整理固件文件夹
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
-      run: | 
+      run: |
         cd openwrt/bin/targets/*/*
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
@@ -139,7 +112,7 @@ jobs:
         name: config.buildinfo_${{ env.FILE_DATE }}
         path: ./config    
     
-    - name: 上传固件到github
+    - name: 上传固件在github空间
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
@@ -165,18 +138,3 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
-
-    - name: 移除旧文件
-      uses: chika0801/delete-workflow-runs@main
-      with:
-        retain_days: 1
-        keep_minimum_runs: 6
-
-    - name: 移除以前的Releases
-      uses: dev-drprasad/delete-older-releases@v0.2.1
-      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
-      with:
-        keep_latest: 6
-        delete_tags: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
