--- a/.github/workflows/rax3000m-nand.yml
+++ b/.github/workflows/rax3000m-nand.yml
@@ -51,7 +51,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential gawk gcc-multilib flex git gettext libncurses5-dev libssl-dev python3-distutils zlib1g-dev
+          sudo -E bash -c 'bash <(curl -sL https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
           sudo -E apt-get -y autoremove
           sudo -E apt-get autoclean
           sudo timedatectl set-timezone "$TZ"
